--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,60 @@
-body {
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html, body {
+  height: 100%;
+}
+
+html {
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 10px;
+  background: #121212;
+  -ms-overflow-style: none;
+  overflow: -moz-scrollbars-none;
+}
+
+body {
+  display: flex;
+  color: #FFF;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+.arrow-icon {
+  fill: #FFF;
+}
+
+.arrow-icon.disabled {
+  fill: rgba(170, 170, 170, 0.6);
+}
+
+.whiteStroke {
+  stroke: #FFF;
+}
+
+.blackStroke {
+  stroke: #000;
+}
+
+#root {
+  flex: 1 0 0;
+  display: flex;
+}
+
+@media (min-width: 768px) and (orientation: portrait), (min-width: 824px) and (orientation: landscape) {
+  #root {
+    display: grid;
+    grid-template-columns: 100px 1fr;
+  }
+}
+
+@media (min-width: 1024px) {
+  #root {
+    grid-template-columns: 230px 1fr;
+  }
 }
