More code changes to shuffle stuff around. Will start a deployment tomorrow night.

--- a/src/index.scss
+++ b/src/index.scss
@@ -21,6 +21,16 @@ body {
   color: #FFF;
 }
 
+h2 {
+  font-size: 2.2rem;
+  font-weight: 600;
+  margin-bottom: 16px;
+}
+
+p {
+  font-size: 1.8rem;
+}
+
 ::-webkit-scrollbar {
   display: none;
 }
